Class.newInstance() deprecation.