@@ -57,8 +57,7 @@ public class TaskRunner {
         Thread.currentThread().setContextClassLoader(cl);
 
         // Go!
-        Class taskClass = cl.loadClass(taskClassName);
-        Runnable task = (Runnable)taskClass.newInstance();
+        Runnable task = (Runnable)Class.forName(taskClassName).getDeclaredConstructor().newInstance();
         task.run();
     }
 }
