@@ -63,7 +63,7 @@ import org.springframework.web.context.support.WebApplicationContextUtils;
 public class RollerContext extends ContextLoaderListener
         implements ServletContextListener {
 
-    private static Log log = LogFactory.getLog(RollerContext.class);
+    private static final Log log = LogFactory.getLog(RollerContext.class);
 
     private static ServletContext servletContext = null;
     private static DelegatingPasswordEncoder encoder;
@@ -357,7 +357,7 @@ public class RollerContext extends ContextLoaderListener
             return null;
         }
 
-        Class clazz;
+        Class<?> clazz;
         try {
             clazz = Class.forName(clazzName);
         } catch (ClassNotFoundException e) {
@@ -365,15 +365,13 @@ public class RollerContext extends ContextLoaderListener
             return null;
         }
 
-        Class[] interfaces = clazz.getInterfaces();
-        for (Class clazz2 : interfaces) {
+        Class<?>[] interfaces = clazz.getInterfaces();
+        for (Class<?> clazz2 : interfaces) {
             if (clazz2.equals(AutoProvision.class)) {
                 try {
-                    return (AutoProvision) clazz.newInstance();
-                } catch (InstantiationException e) {
-                    log.warn("InstantiationException while creating: " + clazzName, e);
-                } catch (IllegalAccessException e) {
-                    log.warn("IllegalAccessException while creating: " + clazzName, e);
+                    return (AutoProvision) clazz.getDeclaredConstructor().newInstance();
+                } catch (ReflectiveOperationException e) {
+                    log.warn("ReflectiveOperationException while creating: " + clazzName, e);
                 }
             }
         }
