@@ -30,7 +30,7 @@ import org.apache.roller.weblogger.util.Utilities;
  */
 public class ModelLoader {
     
-    private static Log log = LogFactory.getLog(ModelLoader.class);
+    private static final Log log = LogFactory.getLog(ModelLoader.class);
     
     /**
      * Convenience method to load a comma-separated list of page models.
@@ -39,15 +39,13 @@ public class ModelLoader {
      * the Model instances.
      */
     public static void loadModels(String modelsString, Map<String, Object> modelMap,
-                                   Map initData, boolean fail) 
-            throws WebloggerException {
+            Map initData, boolean fail) throws WebloggerException {
         
         String[] models = Utilities.stringToStringArray(modelsString, ",");
         if (models != null) {
             for (String model : models) {
                 try {
-                    Class modelClass = Class.forName(model);
-                    Model pageModel = (Model) modelClass.newInstance();
+                    Model pageModel = (Model) Class.forName(model).getDeclaredConstructor().newInstance();
                     pageModel.init(initData);
                     modelMap.put(pageModel.getModelName(), pageModel);
                 } catch (WebloggerException re) {
@@ -62,17 +60,11 @@ public class ModelLoader {
                     } else {
                         log.warn("Error finding model: " + model);
                     }
-                } catch (InstantiationException ie) {
+                } catch (ReflectiveOperationException ex) {
                     if(fail) {
-                        throw new WebloggerException("Error instantiating model: " + model, ie);
+                        throw new WebloggerException("Error instantiating model: " + model, ex);
                     } else {
                         log.warn("Error instantiating model: " + model);
-                    }
-                } catch (IllegalAccessException iae) {
-                    if(fail) {
-                        throw new WebloggerException("Error accessing model: " + model, iae);
-                    } else {
-                        log.warn("Error accessing model: " + model);
                     }
                 }
             }
